# project_ss004.d21.cn1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  animation.cpp  animation.h  config.cpp  config.h  food.cpp  food.h  handler.cpp  handler.h  main.cpp  point.cpp  point.h  snake.cpp  snake.h  ui_screen.cpp  ui_screen.h
